fixed search bar and added buttons

--- a/style.css
+++ b/style.css
@@ -83,17 +83,67 @@ nav li a {
     padding-bottom: 20px;
 }
 
-#search {
-    background-color: transparent;
-    border-radius: 50px;
-    height: 34px;
-    width: 460px;
-    font: 16px arial, sans-serif;
-    padding-bottom: 0px;
-    padding-top: 5px;
-    padding-left: 14px;
-    padding-right: 8px;
+#search-bar-container {
+    width: 1278px;
+    height: 39px;
+    margin: 0;
+    display: flex;
 }
+
+#search-bar-big {
+    background: #fff;
+    display: flex;
+    border-radius: 8px;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
+    border-radius: 24px;
+    z-index: 3;
+    height: 44px;
+    margin: 0 auto;
+    width: 582px;
+    justify-content: center;
+}
+
+#search {
+    background: transparent;
+    border: none;
+    display: flex;
+    z-index: 3;
+    height: 34px;
+    margin: 0 auto;
+    width: 487px;
+}
+
+#pic-container {
+    height:39px;
+    width: 560px;
+    display: flex;
+    position: absolute;
+    left: 359px;
+    right: 359px;
+    z-index: 2;
+}
+
+#glass {
+    display: flex;
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    left: 15px;
+    top: 33%;
+    opacity: .65;
+}
+
+#mic {
+    display: block;
+    position: absolute;
+    height: 20px;
+    width: 15px;
+    right: 0;
+    top: 33%;
+}
+
+
 
 
 
