--- a/style.css
+++ b/style.css
@@ -143,6 +143,24 @@ nav li a {
     top: 33%;
 }
 
+#buttons {
+    padding-top: 18px;
+}
+
+#buttons button {
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    height: 36px;
+    min-width: 54px;
+    margin: 11px 4px;
+    padding: 0px 16px;
+}
+
 
 
 
