--- a/style.css
+++ b/style.css
@@ -9,15 +9,12 @@ nav {
     align-items: center;
     justify-content: center;
     top: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
 }
 
 ul {
     width: 50%;
     display: flex; 
     padding-left: 0px;
-    padding-right: 0px;
     align-items: center;
     margin: 7px 0px 10px 0px;
 }
@@ -30,6 +27,10 @@ nav li a {
     text-decoration: none;
     color: rgb(34, 34, 34);
     font-size: 13px;
+}
+
+nav li a:hover, footer li a:hover {
+    text-decoration: underline;
 }
 
 #left-nav {
@@ -158,6 +159,14 @@ nav li a {
     min-width: 54px;
     margin: 11px 4px;
     padding: 0px 16px;
+}
+
+#google-search:hover, #lucky:hover {
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    background-color: #f8f8f8;
+    border: 1px solid #c6c6c6;
+    color: #222;
 }
 
 footer {
