--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ nav li a:hover, footer li a:hover {
     justify-content: center;
 }
 
+#search-bar-big:hover {
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border-color: rgba(223,225,229,0);
+}
+
 #search {
     background: transparent;
     border: none;
@@ -112,6 +117,11 @@ nav li a:hover, footer li a:hover {
     height: 34px;
     margin: 0 auto;
     width: 487px;
+    font-size: 14px;
+}
+
+#search:focus {
+    outline: none;
 }
 
 #pic-container {
